# coworking_booking

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  insert.sql  pyproject.toml  pytest.ini  start.sh
backend/: Makefile  pyproject.toml
backend/src/: .dockerignore  Dockerfile  main.py
backend/tests/test_endpoint/: conftest.py  test_auth_router.py
src/: main.py  pyproject.toml  pytest.ini
src/common/: context.py  decorators.py  hasher.py
src/common/dependencies/: auth.py
src/common/dto/: coworking.py  coworking_event.py  coworking_seat.py  day_off.py  event.py  image.py  images.py  input_params.py  reservation.py  schedule.py  seats.py  tech_capability.py  user.py
src/common/exceptions/: application.py  rpc.py
src/common/service/: reset_password_send_service.py
src/common/session/: token_service.py
src/common/utils/: __init__.py  image_validators.py  singleton.py  time.py  user.py
src/controllers/: middlewares.py
src/controllers/rest/: __init__.py  images.py
src/controllers/rpc/: __init__.py  abstract_rpc_router.py  admin_coworking_router.py  auth_router.py  coworking_router.py  reservation_router.py  user_router.py  user_settings_router.py
src/infrastructure/: config.py  logging.py
src/infrastructure/database/: db.py  enum.py  fields.py  models.py
src/storage/: s3_repository.py
src/storage/coworking/: __init__.py  abstract_coworking_repository.py  coworking_repository.py
src/storage/coworking_event/: __init__.py  abstract_coworking_event_repository.py  coworking_event_repository.py
src/tests/: test_simple_check.py
(+34 files in other folders)
